387/ Deleted Gambler's Soul due to unable to balance the artifact to be fun to play.
388/ Deleted Small Lootbox artifact, Stella Card Deck because it doesn't fit the design of the mod.
389/ Slight buff all to synergy weapon and some change to certain synergy weapon which are these following:
- Amber Bone Spear: Every 3rd attack will shoot out arch of 3 amber bolt
- Bloody Stella: Blood Star circle are instead move behind a synergy bonus of enchanted sword
- Starlight Distributer: Area dependance effects are removed and instead it is a count shot effect.
- Natural Selection: The ghost bow now handler its own arrow shooting and shot 3 arrow in rapid succession instead of 1.
390/ Changed perk Stroke of Luck to Lucky Strike and Uncertain strike effect
391/ Setting up tool for glow draw and setting up for custom dust.
392/ Fixed a stupid bugs that make specific melee weapon hit every enemy.
393/ Added Akai Hanbun No Hasami
394/ Added sprite for Arena Blessing and Celestial Rage, also slightly reworked the Perk UI system rendering.
395/ Optimize world generation task "Create_Biome" and other such task.
396/ Deleted Test Teleporter debug item, Artifact debug item.
397/ Added a pos marker for trial, structure and such.
398/ Added alt click attack for Annihiliation.
399/ Removed synergy status of Sharp Boomerang.
400/ Added Pyramid structure.
401/ Improvement to marker wand, now you can note marker before setting them.
402/ Merged Feral craws mod item reworked into a actual rework.
403/ Added Marble, Granite and Glowing Mushroom into world generation.
404/ Change log not found !
405/ Added Jungle Temple Entrance structure.
406/ Seperate Light Saber rework from main RoguelikeItemOverhaul file for easier time of understanding the rework.
407/ Added Jungle Temple subworld.
408/ Synergy updated:
- Bundle of Grenade synergy status is removed and now turn into Fragment grenade.
- Add some synergy bonus to various synergy weapon.
409/ Added Greater Life Force Potion.